--- a/src/App.css
+++ b/src/App.css
@@ -13,28 +13,44 @@
   flex-direction: column;
   align-items: center;
   overflow: hidden;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 header {
   width: 100vw;
-  min-width: 300px;
-  max-width: 1100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2vh 2vh;
+  padding: 4vh 4vh;
   box-sizing: border-box;
+}
+
+header h2 {
+  margin: 0;
+}
+
+.nav-menu {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+}
+
+.nav-menu img {
+  height: 60px;
+  z-index: 5;
 }
 
 header ul {
   all: unset;
+  position: absolute;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-around;
   list-style-type: none;
-  height: 100%;
-  width: 300px;
+  background-color: blue;
 }
 
 a {
@@ -43,7 +59,7 @@ a {
 }
 
 header li h5 {
-  margin: 2px;
+  margin: 5px;
   box-sizing: border-box;
 }
 
@@ -58,7 +74,7 @@ a:visited {
 .view {
   box-sizing: border-box;
   padding: 0 2vh;
-  width: 95%;
+  width: 100%;
   min-width: 300px;
   max-width: 850px;
   display: flex;
@@ -76,6 +92,16 @@ a:visited {
 
 .Home {
   text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  justify-content: center;
+  height: 60vh;
+}
+
+.Home .name {
+}
+
+.Home .name h1 {
+  font-size: 50px;
 }
 
 .Home a {
@@ -213,7 +239,9 @@ a:visited {
 }
 
 .project-image img {
-  height: 300px;
+  /* height: 300px; */
+  height: 200px;
+  /* width: 100%; */
 }
 
 .project-title {
@@ -253,8 +281,8 @@ a:visited {
 }
 
 .project-link {
-  height: 100px;
-  width: 200px;
+  height: 25%;
+  width: 50%;
   border-radius: 5px;
 }
 
