--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
   border: 1vh solid black;
   width: 100%;
   background-color: white;
+  position: relative;
+  /* overflow: hidden; */
 }
 
 .App {
@@ -14,7 +16,6 @@
   align-items: center;
   overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
 }
 
 header {
@@ -30,27 +31,135 @@ header h2 {
   margin: 0;
 }
 
-.nav-menu {
+.bar-container {
   position: relative;
-  display: flex;
-  justify-content: center;
-  border: 1px solid black;
+  height: 20px;
+  width: 25px;
+  cursor: pointer;
+  z-index: 6;
+  transition: all 150ms linear;
 }
 
-.nav-menu img {
-  height: 60px;
+.open-container:hover {
+  transform: rotate(90deg)
+}
+
+.bar {
+  width: 25px;
+  height: 2px;
+  border-radius: 10px;
+  background-color: black;
+  transition: all 300ms ease-in-out;
+  position: absolute;
+}
+
+.bar-1 {
+  top: 0;
+}
+
+.bar-2 {
+  top: 45%;
+}
+
+.bar-3 {
+  bottom: 0;
+}
+
+.open-1 {
+  transform: rotate(315deg);
+  top: 50%;
+  background-color: white;
+}
+
+.open-2 {
+  transform: rotate(315deg);
+  background-color: transparent;
+}
+
+.open-3 {
+  transform: rotate(405deg);
+  top: 50%;
+  background-color: white;
+}
+
+/* POP UP MENU */
+
+.pop-up-menu {
+  position: fixed;
+  background-color: rgba(99, 139, 255, 0.98);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 400ms ease-in-out;
   z-index: 5;
+  display: flex;
+}
+
+.closed {
+  height: 0px;
+  width: 0px;
+  border-radius: 50%;
+}
+
+.closed li {
+  display: none;
+}
+
+.closed li a {
+  color: transparent;
+}
+
+.closed li a:visited{
+  color: transparent;
+}
+
+.open {
+  height: 250vw;
+  width: 250vw;
+  border-radius: 50%;
+}
+
+.open ul {
+  margin: auto;
+}
+
+.pop-up-menu li {
+  font-size: 24px;
+  margin: 5vh;
+  overflow: hidden;
+}
+
+.pop-up-menu p {
+  margin: 0;
+}
+
+.underline {
+  width: 100%;
+  background-color: white;
+  height: 3px;
+  transform: translateX(-110%);
+  transition: all 200ms linear;
+}
+
+.pop-up-menu li:hover .underline {
+  transform: translateX(0%);
+}
+
+.pop-up-menu a {
+  color: white;
+}
+
+.pop-up-menu a:visited {
+  color: white;
 }
 
 header ul {
   all: unset;
-  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   list-style-type: none;
-  background-color: blue;
 }
 
 a {
@@ -58,18 +167,11 @@ a {
   color: black;
 }
 
-header li h5 {
-  margin: 5px;
-  box-sizing: border-box;
-}
-
-header li:hover{
-  border-bottom: 2px solid blue;
-}
-
 a:visited {
   color: black;
 }
+
+/* GENERAL STYLES */
 
 .view {
   box-sizing: border-box;
@@ -93,60 +195,32 @@ a:visited {
 .Home {
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  justify-content: center;
-  height: 60vh;
+  height: 80vh;
 }
 
 .Home .name {
-}
-
-.Home .name h1 {
-  font-size: 50px;
-}
-
-.Home a {
-  height: 300px;
-}
-
-.Home .title {
-  margin-bottom: 5vh;
-}
-
-.Home .image-container {
-  height: 280px;
-  width: 280px;
-  background-image: url(./Camino1.JPG);
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 50%;
-  background-position-x: 50%;
-  background-position-y: 80%;
-  margin: auto;
-  transition: all 200ms linear;
-}
-
-.image-container:hover {
-  transform: scale(1.05);
-}
-
-.image-container .link {
-  height: 100%;
+  margin-top: 5vh;
   width: 100%;
-  border-radius: 50%;
-  /* box-shadow: 0 5px 10px 2px black; */
+  font-size: 25px;
 }
 
-.about-short {
-  text-align: left;
-  line-height: 40px;
+.Home .job {
+  width: 100%;
 }
 
-.about-short h3 {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.developer-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.about-short p {
-  font-size: 14px;
+.Home svg {
+  width: 240px;
+  height: 150px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 40%);
 }
 
 /* ABOUT VIEW */
