--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
   width: 100%;
   background-color: white;
   position: relative;
-  /* overflow: hidden; */
 }
 
 .App {
@@ -226,13 +225,14 @@ a:visited {
 /* ABOUT VIEW */
 
 .About {
-  justify-content: space-around;
 }
 
 .arrow-container {
-  /* position: absolute; */
-  /* border: 1px solid black; */
-  width: 80%;
+  position: absolute;
+  bottom: 5vh;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 250px;
   height: 5vh;
   display: flex;
   justify-content: space-between;
@@ -242,20 +242,44 @@ a:visited {
 
 .arrow {
   cursor: pointer;
-  font-size: 40px;
+  color: rgba(99, 139, 255, 0.98);
+  font-size: 30px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.arrow-left {
+.tracker-container {
+  width: 100px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.arrow-right {
+.slide-tracker {
+  background-color: rgba(99, 139, 255, 0.7);
+  height: 20px;
+  width: 20px; 
+  border-radius: 50%;
+  transition: all 200ms linear;
+  box-shadow: 0 0 3px 1px gray;
+}
+
+.slide-tracker:hover {
+  background-color: rgba(99, 139, 255, 0.98);
+  cursor: pointer;
+}
+
+.active {
+  background-color: rgba(99, 139, 255, 0.98);
+  transform: scale(1.1);
 }
 
 .About .paragraph {
   position: relative;
   display: flex;
   flex-direction: column;
-  /* border: 1px solid black; */
 }
 
 .About .paragraph img {
