--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 header {
@@ -23,8 +23,8 @@ header {
   left: 0;
   right: 0;
   border: 10px solid black;
-  border-bottom: 1px solid transparent;
-  padding: 0 15px;
+  border-bottom: none;
+  padding: 0 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -44,6 +44,7 @@ header {
 
 .logo h2 {
   color: black;
+  color: white;
   font-family: 'Pacifico', cursive;
   box-sizing: border-box;
   font-size: 3vh;
@@ -67,6 +68,7 @@ header {
   height: 3px;
   border-radius: 15px;
   background-color: black;
+  background-color: white;
   transition: all 300ms ease-in-out;
   position: absolute;
 }
@@ -226,21 +228,37 @@ a:visited {
   text-align: center;
   justify-content: center;
   position: relative;
+  background-color: rgb(0, 90, 192);
+  color: white;
+  background-image: url(./trees.jpg);
+  background-image: url(.//mountains.jpg);
+  background-image: url(./trees2.jpg);
+  background-image: url(./mountains2.jpg);
+  background-image: url(./mountains3.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .name-container {
   width: 100%;
-  margin: auto auto 50vh auto;
+  margin: auto auto 45vh auto;
+  text-shadow: 0 0 8px black;
 }
 
 .Title .name {
-  font-size: 3.5vh;
+  font-size: 3.4vh;
   font-family: 'Pacifico', cursive;
 }
 
 .Title .job {
   width: 100%;
   font-size: 2.5vh;
+}
+
+.Title .arrow-down a,
+.Title .arrow-down a:visited {
+  color: white;
 }
 
 
@@ -412,56 +430,35 @@ a:visited {
 .Contact {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   height: calc(100vh-10px);
-  padding-top: 10vh;
+  padding: 10vh 0 20vh 0;
+  align-items: center;
+}
+
+.Contact .title h2 {
+  font-size: 7vh;
+  margin: 0;
+}
+
+.Contact .button {
+  justify-content: space-around;
+}
+
+.Contact .button {
+  font-size: 2vh;
 }
 
 .contacts {
-  margin: auto;
+  width: 275px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  width: 100%;
-  min-height: 50vh;
+  font-size: 14px;
 }
 
-.contacts p {
-  font-size: 12px;
-}
-
-.contact-box {
-  background-color: rgba(0, 0, 0, .05);
-  border-radius: 5px;
-  padding: 5vh;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  height: 10vh;
-  width: 10vh;
-  margin: 10px;
-}
-
-.icon-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  padding: 5px 11px;
-}
-
-.whatsapp {
-  background-color: rgb(71, 199, 88);
-  color: white;
-}
-
-.linked-in {
-  background-color: rgb(0, 123, 182);
-  color: white;
-}
-
-.linked-in a {
-  color: white;
+.vertical-line {
+  background-color: grey;
+  width: 1px;
+  height: 14px;
 }
