--- a/src/App.css
+++ b/src/App.css
@@ -231,11 +231,7 @@ a:visited {
   background-color: rgb(0, 90, 192);
   color: white;
   background-image: url(./trees.jpg);
-  background-image: url(.//mountains.jpg);
-  background-image: url(./trees2.jpg);
-  background-image: url(./mountains2.jpg);
-  background-image: url(./mountains3.jpg);
-  background-position: center;
+  background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -284,7 +280,6 @@ a:visited {
 
 .maps-container {
   width: 100%;
-  border: 1px solid black;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -298,8 +293,13 @@ a:visited {
 }
 
 .About .paragraph img {
-  filter: drop-shadow(0px 0px 6px grey);
+  filter:  grayscale(60%) blur(1px);
   height: 20vh;
+  transition: all 300ms linear;
+}
+
+.paragraph img:hover {
+  filter: drop-shadow(0px 0px 6px grey);
 }
 
 @media (max-width: 500px) {
@@ -380,7 +380,9 @@ a:visited {
 
 .button {
   border: 3px solid red;
+  border: 3px solid #186218;
   color: red;
+  color: #186218;
   box-sizing: border-box;
   border-radius: 5px;
   height: 5vh;
@@ -389,13 +391,14 @@ a:visited {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 300ms linear;
+  transition: all 400ms linear;
   cursor: pointer;
   font-size: 14px;
 }
 
 .button:hover {
   background-color: red;
+  background-color: #186218;
   color: white;
 }
 
@@ -405,7 +408,6 @@ a:visited {
   width: 100%;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid black; */
 }
 
 .technology-container h3 {
