--- a/src/App.css
+++ b/src/App.css
@@ -149,7 +149,7 @@ a:visited {
   animation-duration: 800ms;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
-  z-index: 5;
+  z-index: 4;
 }
 
 @keyframes bounceArrow {
@@ -258,35 +258,57 @@ a:visited {
 
 .Projects {
   width: 100%;
+  box-sizing: border-box;
+  padding: 0 10vw;
 }
 
 .project {
+  height: 100vh;
   width: 100%;
   position: relative;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  height: 100vh;
   padding-top: 10vh;
   box-sizing: border-box;
+  /* border: 1px solid red; */
+}
+
+#project-1 {
+  grid-template-columns: 2fr 3fr;
+}
+
+#project-1 .project-information {
+  grid-column: 1 / 2;
+  margin: 10vh auto auto 10vw;
+}
+
+#project-1 .image-container {
+  grid-column: 2 / 3;
+}
+
+#project-2 {
+  grid-template-columns: 3fr 2fr;
+}
+
+#project-2 .image-container {
+  grid-column: 1 / 2;
+}
+
+#project-2 .project-information {
+  grid-column: 2 / 3;
+  margin: 10vh 10vw auto auto;
 }
 
 .project-information {
-  margin: 20vh 0 auto auto;
-  width: 30vw;
-  min-width: 300px;
-  height: 40vh;
-  grid-column: 1 / 2;
+  width: 20vw;
+  height: 30vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-around;
+  /* border: 1px solid blue; */
 }
 
 .project .image-container img {
-  grid-column: 2 / 3;
-  margin: auto auto auto 0;
+  margin: 10vh auto auto auto;
   display: block;
   max-width:100vw;
   max-height:60vh;
@@ -326,10 +348,10 @@ a:visited {
 }
 
 .button-container {
-  width: 100%;
+  width: auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .button-container a {
@@ -402,6 +424,7 @@ a:visited {
 
 .Contact .button {
   justify-content: space-around;
+  width: 200px;
 }
 
 .Contact .button {
@@ -424,20 +447,35 @@ a:visited {
 
 /* MEDIA QUERIES */
 
-@media (max-width: 1025px) {
+@media (max-width: 1600px) {
   .project {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-around;
+    align-items: center;
+    padding-bottom: 10vh;
+  }
+
+  #project-1 .project-information {
+    margin: auto;
+  }
+
+  #project-2 .project-information {
+    margin: auto;
+  }
+
+  #project-2 .image-container {
+    order: 2;
   }
 
   .project-information {
     margin: 5vh auto 0 auto;
     height: 25vh;
+    height: auto;
+    min-width: 280px;
   }
 
   .project-title h4 {
-    font-size: 5vh;
     text-align: center;
   }
 
@@ -446,28 +484,12 @@ a:visited {
   }
 
   .project-title p {
-    font-size: 12px;
     text-align: center;
-  }
-
-  .technology-container {
-    margin: 0 0 2vh 0;
-  }
-  
-  .technology-container h3 {
-    font-size: 12px;
-    margin: 0 0 5px 0;
-  }
-  
-  .technology-container img {
-    height: 40px;
-  }
-  
-  .technology-container #odd {
-    height: 32px;
   }
 
   .project .image-container img {
     margin: auto;
+    max-height: 50vh;
+    max-width: 90vw;
   }
 }
