--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 
 header {
   width: 100%;
-  height: 8vh;
+  height: 10vh;
   position: fixed;
   top: 0;
   left: 0;
@@ -114,6 +114,108 @@ header li:hover .underline {
   background-color: #d7263d;
 }
 
+.bar-container {
+  display: none;
+  position: relative;
+  height: 25px;
+  width: 30px;
+  z-index: 5;
+  cursor: pointer;
+}
+
+.bar {
+  width: 100%;
+  height: 5px;
+  background-color: white;
+  border-radius: 5px;
+  position: absolute;
+  transition: all 400ms linear;
+  transform-origin: center;
+}
+
+.scrolled .bar {
+  background-color: #d7263d;
+}
+
+.bar-1 {
+  top: 0;
+  left: 0;
+}
+
+.open-bar-1 {
+  top: 0%;
+  left: 50%;
+  transform: rotate(315deg) translate(-50%, -50%);
+  background-color: #d7263d;
+}
+
+.bar-2 {
+  top: 50%;
+  left: 0;
+  transform: translate(0%, -50%);
+}
+
+#hidden-2 {
+  background-color: transparent;
+  transform: translate(0, -50%) rotate(360deg);
+}
+
+.bar-3 {
+  bottom: 0;
+}
+
+.open-bar-3 {
+  top: 0%;
+  right: 50%;
+  transform: rotate(405deg) translate(65%, -120%);
+  background-color: #d7263d;
+}
+
+.pop-up-menu {
+  position: fixed;
+  border-radius: 50%;
+  transition: all 400ms ease-in-out;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 0;
+  width: 0;
+  overflow: hidden;
+  transform-origin: center;
+  display: flex;
+  background-color: var(--gold);
+}
+
+.pop-up-menu {
+  color: transparent;
+}
+
+.open {
+  height: 150vmax;
+  width: 150vmax;
+}
+
+.open .bar {
+  background-color: white;
+}
+
+.pop-up-menu li p {
+  color: transparent;
+}
+
+.open li p {
+  color: white;
+}
+
+.pop-up-menu ul{
+  margin: auto;
+  height: 50%;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 /* GENERAL STYLES */
 
 .view {
@@ -199,16 +301,33 @@ a:visited {
 
 .About {
   box-sizing: border-box;
-  padding-top: 10vh;
+  padding: 10vh 0 10vh 0;
   position: relative;
   height: 100vh;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: row;
   justify-content: center;
+  color: white;
+  box-shadow: 0 0 2px white;
+}
+
+.About i {
+  color: white;
+}
+
+.background-div {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-image: url(./pattern.jpg);
+  background-size: 300px;
+  /* filter: invert(86%) sepia(86%) saturate(2563%) hue-rotate(316deg) brightness(95%) contrast(87%); */
+  filter: invert(80%) sepia(60%) saturate(2423%) hue-rotate(319deg) brightness(89%) contrast(100%);
 }
 
 .About .title {
   font-size: 35px;
+  z-index: 2;
 }
 
 .About .title h2 {
@@ -216,6 +335,7 @@ a:visited {
 }
 
 .maps-container {
+  margin-top: 5vh;
   width: 100%;
   display: flex;
   justify-content: space-around;
@@ -230,28 +350,19 @@ a:visited {
 }
 
 .About .paragraph img {
-  filter:  grayscale(60%);
-  height: 20vh;
+  height: 10vh;
   transition: all 300ms linear;
-}
-
-.paragraph img:hover {
-  filter: drop-shadow(0px 0px 6px grey);
-}
-
-@media (max-width: 500px) {
-  .About .paragraph img {
-    height: 10vh;
-  }
+  filter: invert(100%) sepia(0%) saturate(7486%) hue-rotate(305deg) brightness(116%) contrast(96%);
 }
 
 .About .paragraph p {
   max-width: 800px;
   width: 90%;
-  line-height: 30px;
+  line-height: 24px;
   text-align: center;
-  padding: 0 10px;
-  font-size: 14px;
+  font-size: 2.3vmin;
+  margin: 5vh auto;
+  /* text-shadow: 0 0 1px black; */
 }
 
 /* PROJECTS VIEW */
@@ -259,7 +370,7 @@ a:visited {
 .Projects {
   width: 100%;
   box-sizing: border-box;
-  padding: 0 10vw;
+  /* padding: 0 10vw; */
 }
 
 .project {
@@ -491,5 +602,33 @@ a:visited {
     margin: auto;
     max-height: 50vh;
     max-width: 90vw;
+  }
+}
+
+@media (max-width: 900px) {
+
+  .expanded {
+    display: none;
+  }
+
+  .bar-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 500px) {
+  header {
+    padding: 10px 10px 0 10px;
+  }
+
+  .About .paragraph img {
+    height: 10vh;
+  }
+
+  .About .paragraph p {
+    font-size: 14px;
   }
 }
