--- a/src/App.css
+++ b/src/App.css
@@ -204,11 +204,12 @@ header li:hover .underline {
 
 .open li p {
   color: white;
+  z-index: 5;
 }
 
 .pop-up-menu ul{
   margin: auto;
-  height: 50%;
+  height: 50vh;
   width: 100%;
   flex-direction: column;
   align-items: center;
